// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateWidget renders a date view widget component 1`] = `
<span
  className="metadata date widget"
>
  04 Aug 2020
</span>
`;

exports[`DateWidget renders a date view widget component with children 1`] = `
<span
  className="metadata date widget"
>
  <strong>
    04 Aug 2020
  </strong>
</span>
`;

exports[`DateWidget renders a date view widget component with custom format 1`] = `
<span
  className="metadata date widget"
>
  04 Aug 2020
</span>
`;

exports[`DateWidget renders an empty date view widget component 1`] = `""`;
